--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Data Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2026. All Rights Reserved.'
+title: Chenyu Xu's Homepage
+page-top-title: Chenyu Xu
+top-section-bg-text: Artificial Intelligence & communication
+home-subtitle: Chenyu Xu&ensp;|&ensp;许晨宇
+copyright-text: '&copy;Chenyu Xu 2023-2026. All Rights Reserved.'
